<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.VehicleDetailsActivity">

    <data>

        <variable
            name="listing"
            type="com.chalupin.carfax_mvvm.data.Listing" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/vehicle_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:imageUrl="@{listing.images.firstPhoto.large}"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/vehicle_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:text="@{@string/year_make_model(Integer.toString(listing.year),listing.make,listing.model)}"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_mileage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="20dp"
            android:maxLines="1"
            android:textSize="22sp"
            android:textStyle="bold"
            app:setPriceMiles="@{listing}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#f2f2f2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/vehicle_info"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exterior_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/interior_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drive_type" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transmission" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/body_style" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/engine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fuel" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/vi_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{@string/city_state(listing.dealer.city,listing.dealer.state)}"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vi_exterior_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{listing.exteriorColor}"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vi_interior_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{listing.interiorColor}"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vi_drive_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{listing.drivetype}"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vi_transmission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{listing.transmission}"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vi_body_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{listing.bodytype}"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vi_engine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{listing.engine}"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vi_fuel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{listing.fuel}"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#f2f2f2" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/call_dealer_button"
            android:onClick="@{(view) -> listing.callDealer(view)}"
            android:text="@string/call_dealer"
            android:textColor="@android:color/white"
            app:backgroundTint="@null" />

    </LinearLayout>
</layout>